# spajam2025

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  pyproject.toml
config/: middleware.py  routing.py  urls.py
config/settings/: base.py
main/: schema.py  urls.py
main/helpers/: __init__.py
main/management/commands/: maketestuser.py
main/migrations/: 0009_capsule.py  0010_capsule_images.py  0011_auto_20241005_2348.py
main/models/: __init__.py  capsule.py
main/serializers/: __init__.py  capsule.py  image.py  user.py
main/serializers/common/: __init__.py  uuid.py
main/utils/: __init__.py  geo.py
main/views/: __init__.py  capsule.py  capsule_image.py  user.py
main/views/common/auth/: uuid.py
main/views/common/register/: uuid.py
room/consumers/: room.py
shells/: gen_schema.sh
